--- a/web/web-app/package.json
+++ b/web/web-app/package.json
@@ -14,24 +14,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.2.1",
-    "@angular/common": "^20.2.1",
-    "@angular/compiler": "^20.2.1",
-    "@angular/core": "^20.2.1",
+    "@angular/animations": "^20.2.3",
+    "@angular/cdk": "^20.2.1",
+    "@angular/common": "^20.2.3",
+    "@angular/compiler": "^20.2.3",
+    "@angular/core": "^20.2.3",
     "@angular/fire": "^20.0.1",
-    "@angular/forms": "^20.2.1",
-    "@angular/platform-browser": "^20.2.1",
-    "@angular/platform-browser-dynamic": "^20.2.1",
-    "@angular/router": "^20.2.1",
+    "@angular/forms": "^20.2.3",
+    "@angular/platform-browser": "^20.2.3",
+    "@angular/platform-browser-dynamic": "^20.2.3",
+    "@angular/router": "^20.2.3",
     "@aws-amplify/ui-angular": "^5.1.3",
-    "@primeng/themes": "^20.0.1",
+    "@primeng/themes": "^20.1.0",
     "@tailwindcss/postcss": "^4.1.12",
-    "aws-amplify": "^6.15.5",
     "chart.js": "4.5.0",
-    "firebase": "^12.1.0",
+    "firebase": "^12.2.1",
     "primeclt": "^0.1.5",
     "primeicons": "^7.0.0",
-    "primeng": "^20.0.1",
+    "primeng": "^20.1.0",
     "rxjs": "~7.8.2",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.8.1",
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.2.1",
     "@angular/cli": "^20.2.1",
-    "@angular/compiler-cli": "^20.2.1",
+    "@angular/compiler-cli": "^20.2.3",
     "@types/jasmine": "~5.1.9",
     "angular-eslint": "^20.2.0",
     "autoprefixer": "^10.4.21",
@@ -49,7 +49,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.5.4",
-    "jasmine-core": "~5.9.0",
+    "jasmine-core": "~5.10.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
