--- a/services/src/main/resources/application-prod.properties
+++ b/services/src/main/resources/application-prod.properties
@@ -51,6 +51,9 @@ quarkus.smallrye-health.root-path=/health
 quarkus.smallrye-health.liveness-path=/health/live
 quarkus.smallrye-health.readiness-path=/health/ready
 
+# Package configuration
+quarkus.package.jar.type=fast-jar
+
 # Metrics (optional - for monitoring)
 quarkus.micrometer.enabled=true
 quarkus.micrometer.registry-enabled-default=true
