--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -34,6 +34,9 @@ quarkus.swagger-ui.path=/swagger-ui
 # Logging
 quarkus.log.category."za.cf.cp".level=DEBUG
 
+# Package configuration
+quarkus.package.jar.type=fast-jar
+
 # Firebase configuration (for production)
 firebase.project-id=corepadelapp
 firebase.region=us-central1
