Enhancements for MVP

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Configure Docker for GCP
         run: gcloud auth configure-docker
 
-      - name: Create GCR repository (if it doesn't exist)
+      - name: Create Artifact Registry repository (if it doesn't exist)
         run: |
           gcloud artifacts repositories create corepadel-quarkus \
             --repository-format=docker \
@@ -90,20 +90,23 @@ jobs:
             --description="Core Padel Quarkus Backend" \
             || echo "Repository already exists"
 
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev
+
       - name: Build and push Docker image
         run: |
           cd services
-          docker build -f src/main/docker/Dockerfile.jvm -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }} .
-          docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
+          docker build -f src/main/docker/Dockerfile.jvm -t us-central1-docker.pkg.dev/${{ env.PROJECT_ID }}/corepadel-quarkus/${{ env.SERVICE_NAME }}:${{ github.sha }} .
+          docker push us-central1-docker.pkg.dev/${{ env.PROJECT_ID }}/corepadel-quarkus/${{ env.SERVICE_NAME }}:${{ github.sha }}
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy ${{ env.SERVICE_NAME }} \
-            --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }} \
+            --image us-central1-docker.pkg.dev/${{ env.PROJECT_ID }}/corepadel-quarkus/${{ env.SERVICE_NAME }}:${{ github.sha }} \
             --platform managed \
             --region ${{ env.REGION }} \
             --allow-unauthenticated \
-            --set-env-vars="QUARKUS_DATASOURCE_JDBC_URL=${{ secrets.DATABASE_URL }},QUARKUS_DATASOURCE_USERNAME=${{ secrets.DATABASE_USERNAME }},QUARKUS_DATASOURCE_PASSWORD=${{ secrets.DATABASE_PASSWORD }},FIREBASE_PROJECT_ID=${{ env.PROJECT_ID }},FIREBASE_REGION=${{ env.REGION }}" \
+            --set-env-vars="QUARKUS_DATASOURCE_JDBC_URL=${{ secrets.DATABASE_URL }},QUARKUS_DATASOURCE_USERNAME=${{ secrets.DATABASE_USERNAME }},QUARKUS_DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }},FIREBASE_PROJECT_ID=${{ env.PROJECT_ID }},FIREBASE_REGION=${{ env.REGION }}" \
             --port 8080 \
             --memory 1Gi \
             --cpu 1 \
