--- a/web/web-app/angular.json
+++ b/web/web-app/angular.json
@@ -81,25 +81,13 @@
                     "builder": "@angular-devkit/build-angular:extract-i18n"
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular-devkit/build-angular:jest",
                     "options": {
+                        "tsConfig": "tsconfig.spec.json",
                         "polyfills": [
                             "zone.js",
                             "zone.js/testing"
-                        ],
-                        "tsConfig": "tsconfig.spec.json",
-                        "inlineStyleLanguage": "scss",
-                        "assets": [
-                            {
-                                "glob": "**/*",
-                                "input": "src/assets",
-                                "output": "assets"
-                            }
-                        ],
-                        "styles": [
-                            "src/assets/styles.scss"
-                        ],
-                        "scripts": []
+                        ]
                     }
                 }
             }
