--- a/web/web-app/package.json
+++ b/web/web-app/package.json
@@ -13,46 +13,64 @@
     "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
-    "test": "ng test"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:coverage:ci": "jest --coverage --ci --watchAll=false",
+    "test:coverage:report": "jest --coverage --coverageReporters=html && open coverage/index.html",
+    "test:coverage:badge": "node scripts/coverage-badge.js",
+    "test:report": "node scripts/test-report.js",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.2.3",
-    "@angular/cdk": "^20.2.1",
-    "@angular/common": "^20.2.3",
-    "@angular/compiler": "^20.2.3",
-    "@angular/core": "^20.2.3",
+    "@angular/animations": "^20.3.1",
+    "@angular/cdk": "^20.2.4",
+    "@angular/common": "^20.3.1",
+    "@angular/compiler": "^20.3.1",
+    "@angular/core": "^20.3.1",
     "@angular/fire": "^20.0.1",
-    "@angular/forms": "^20.2.3",
-    "@angular/platform-browser": "^20.2.3",
-    "@angular/platform-browser-dynamic": "^20.2.3",
-    "@angular/router": "^20.2.3",
+    "@angular/forms": "^20.3.1",
+    "@angular/platform-browser": "^20.3.1",
+    "@angular/platform-browser-dynamic": "^20.3.1",
+    "@angular/router": "^20.3.1",
     "@aws-amplify/ui-angular": "^5.1.3",
-    "@primeng/themes": "^20.1.0",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@primeng/themes": "^20.1.2",
+    "@tailwindcss/postcss": "^4.1.13",
     "chart.js": "4.5.0",
     "firebase": "^12.2.1",
     "primeclt": "^0.1.5",
     "primeicons": "^7.0.0",
-    "primeng": "^20.1.0",
+    "primeng": "^20.1.2",
     "rxjs": "~7.8.2",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.2.1",
-    "@angular/cli": "^20.2.1",
-    "@angular/compiler-cli": "^20.2.3",
+    "@angular-devkit/build-angular": "^20.3.2",
+    "@angular/cli": "^20.3.2",
+    "@angular/compiler-cli": "^20.3.1",
+    "@playwright/test": "^1.55.0",
+    "@testing-library/angular": "^18.0.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jasmine": "~5.1.9",
-    "angular-eslint": "^20.2.0",
+    "@types/jest": "^30.0.0",
+    "angular-eslint": "^20.3.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.34.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.5.4",
     "jasmine-core": "~5.10.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "jest-preset-angular": "^15.0.1",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
@@ -60,7 +78,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.9.2"
   }
 }
